# p4runtime-shell

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .travis.yml  Dockerfile  Dockerfile.dev  Makefile  README-publish-python-package.md  README.md  docker_entry_point.sh  p4runtime-sh  p4runtime-sh-docker  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  unittest.cfg
.github/workflows/: pypi.yml  test.yml  toc.yml
config_builders/: test_tofino.py  tofino.py
p4runtime_sh/: __init__.py  __main__.py  bytes_utils.py  context.py  global_options.py  p4runtime.py  shell.py  test.py  utils.py
p4runtime_sh/testdata/: unittest.bin.license  unittest.p4info.pb.txt
usage/: oneshots.md  packet_io.md  pre.md  read_table_entry_counter.md
