[metadata]
name = p4runtime-shell
description = The P4Runtime shell
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/p4lang/p4runtime-shell
author = P4 API Working Group
author_email = p4-api@lists.p4.org
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = p4runtime_sh
platforms = any
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    iterators == 0.2.0
    ipaddr == 2.2.0
    jedi == 0.17.2
    ipython >= 7.31.1, == 7.31.*; python_version>='3.7'
    ipython >= 7.16.3, == 7.16.*; python_version<'3.7'
    # more recent versions of Protobuf need P4Runtime Python files to be regenerated with the correct protoc version
    protobuf >= 3.15.0, < 3.21.0
    grpcio >= 1.35.0
    p4runtime == 1.3.0
